--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write \"src/**/*.{js,ts,vue}\""
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -16,9 +17,10 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "husky": "^8.0.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
-    "vue-tsc": "^1.4.2",
-    "husky": "^8.0.0"
+    "vue-tsc": "^1.4.2"
   }
 }
