--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
