--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "pinia": "^2.0.32",
@@ -22,6 +24,13 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@storybook/addon-essentials": "^7.0.11",
+    "@storybook/addon-interactions": "^7.0.11",
+    "@storybook/addon-links": "^7.0.11",
+    "@storybook/blocks": "^7.0.11",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/vue3": "^7.0.11",
+    "@storybook/vue3-vite": "^7.0.11",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -31,6 +40,7 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.34.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.0",
     "jsdom": "^21.1.0",
@@ -38,6 +48,9 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.11",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
